# ergodic_sketching_ros

ergodic_sketching/: package.xml
ergodic_sketching/src/: TrajectoryUtils.cpp
ergodic_sketching_msgs/: CMakeLists.txt
ergodic_sketching_msgs/srv/: PostProcess.srv
ergodic_sketching_ros/: CMakeLists.txt  package.xml
ergodic_sketching_ros/config/: drozbot_config_panda.yaml  ilqr_planner_config_panda.yaml
ergodic_sketching_ros/descriptions/: panda_drawing.urdf.xacro
ergodic_sketching_ros/launch/: demo.launch.py  panda_drawing_gazebo.launch.py  panda_drawing_real.launch.py
ergodic_sketching_ros/scripts/: panda_draw.py  sketcher_client.py
ergodic_sketching_ros/src/: ergodic_sketching_ros.cpp  ilqr_planner_ros.cpp  postprocess_ros.cpp
