<?xml version="1.0"?>
<!--
SPDX-FileCopyrightText: 2023 Idiap Research Institute <contact@idiap.ch>

SPDX-FileContributor: Jeremy Maceiras  <jeremy.maceiras@idiap.ch>

SPDX-License-Identifier: GPL-3.0-only
-->
<package format="3">
    <name>ergodic_sketching_ros</name>
    <version>0.0.1</version>
    <description>etgodic_sketching_ros package</description>
    <maintainer email="jeremy.maceiras@idiap.ch">Jérémy Maceiras</maintainer>
    <license>GPLv3</license>
    
    <buildtool_depend>ament_cmake</buildtool_depend>
    
    <depend>rclcpp</depend>
    <depend>rclcpp_action</depend>
    <depend>rclcpp_components</depend>
    <depend>rclpy</depend>

    <depend>ergodic_sketching</depend>
    <depend>ergodic_sketching_msgs</depend>
    <depend>cv_bridge</depend>
    <depend>nav_msgs</depend>
    <depend>trajectory_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>rcl_interfaces</depend>
    <depend>xacro</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
